...
            Рекорд: \(statisticService.bestGame?.correct ?? 0)/10 (\(statisticService.bestGame?.date.dateTimeString ?? "Ошибка времени")),
            Средняя точность: \(String(format: "%.2f", statisticService.totalAccuracy))
            """
        let viewModel = AlertModel(
            title: "Этот раунд окончен!",
            message: message,
            buttonText: "Сыграть ещё раз"
        ) { [weak self] in
            self?.viewController?.correctAnswers = 0
            self?.resetQuestionIndex()
            self?.questionFactory?.requestNextQuestion()
        }
        viewController?.alertPresent?.show(alertPresent: viewModel)
...
